fix product tests